Added Customers and Reviews collections
